syntax = "proto3";
package devkit.v1;

import "devkit/v1/accounts_auth.proto";
import "devkit/v1/accounts_role.proto";
import "devkit/v1/accounts_user.proto";
// INJECT IMPORTS
import "devkit/v1/property_city.proto";
import "devkit/v1/command_pallete.proto";
import "devkit/v1/property_location.proto";
import "devkit/v1/public_email.proto";
import "devkit/v1/public_icon.proto";
import "devkit/v1/public_setting.proto";
import "devkit/v1/public_storage.proto";
import "devkit/v1/public_translation.proto";
import "devkit/v1/service_options.proto";
import "devkit/v1/tenant_page.proto";
import "devkit/v1/tenant_partial.proto";
import "devkit/v1/tenant_section.proto";
import "devkit/v1/tenant_tenant.proto";

// The `DevkitService` defines the structure for our gRPC API. It is organized into domains such as `public` and `accounts`,
// which correspond to folders under `app/` and represent schemas in the database. Each domain operates on its specific schema,
// ensuring a clear separation of concerns.
//
// Naming conventions:
// - Each endpoint's name starts with the corresponding table name (in singular form) and reflects the feature it implements.
// - SQL table names are always singular, aligning with endpoint naming.
// - Endpoints requiring authorization are represented by a record in `accounts_schema.permission` to allow the authorization
//   interceptor to function properly.
//
// Special Options:
// - `option idempotency_level = NO_SIDE_EFFECTS`: Marks an endpoint as safe for GET requests because it does not modify data
//   sources; it only reads data.
// - `option (skip_authentication) = true`: Exempts the endpoint from authentication and authorization checks, allowing it to be
//   accessed without a token in the header.
// - `option (skip_authorization) = true`: Skips only the authorization checks, while authentication is still enforced.

service DevkitService {
  // INJECT METHODS
  rpc SectionListInpt(SectionListInptRequest) returns (SectionListInptResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc PartialTypeListInput(PartialTypeListInputRequest) returns (PartialTypeListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc PartialFindForUpdate(PartialFindForUpdateRequest) returns (PartialFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc PageFindForUpdate(PageFindForUpdateRequest) returns (PageFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc CityListInput(CityListInputRequest) returns (CityListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }

  rpc CityList(CityListRequest) returns (CityListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc LocationListInput(LocationListInputRequest) returns (LocationListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }

  rpc LocationList(LocationListRequest) returns (LocationListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc TenantDeleteRestore(TenantDeleteRestoreRequest) returns (TenantDeleteRestoreResponse) {}


  rpc TenantDashboard(TenantDashboardRequest) returns (TenantDashboardResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc TenantFind(TenantFindRequest) returns (TenantFindResponse) {
    option (skip_authentication) = true;
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc TenantList(TenantListRequest) returns (TenantListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc TenantListInput(TenantListInputRequest) returns (TenantListInputResponse) {
    option (skip_authentication) = true;
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc TenantCreateUpdate(TenantCreateUpdateRequest) returns (TenantCreateUpdateResponse) {}

  //////////////////////////////////////////////////////////////////////////////////////////////
  // public
  //////////////////////////////////////////////////////////////////////////////////////////////
  // settings
  rpc SettingFindForUpdate(SettingFindForUpdateRequest) returns (SettingFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc SettingUpdate(SettingUpdateRequest) returns (SettingUpdateResponse) {}

  // icons
  rpc IconList(IconListRequest) returns (IconListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }

  rpc IconFind(IconFindRequest) returns (IconFindResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }
  rpc IconCreateUpdateBulk(IconCreateUpdateBulkRequest) returns (IconCreateUpdateBulkResponse) {}
  // TODO: icon delete
  // buckets
  rpc BucketList(BucketListRequest) returns (BucketListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }
  rpc BucketCreateUpdate(BucketCreateUpdateRequest) returns (BucketCreateUpdateResponse) {}

  // files
  rpc FileList(FileListRequest) returns (FileListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }
  rpc GalleryList(GalleryListRequest) returns (GalleryListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (permission_group) = 'file';
    option (permission_name) = 'FileList';
  }

  rpc FileUploadUrlFind(FileUploadUrlFindRequest) returns (FileUploadUrlFindResponse) {
    option (skip_authorization) = true;
  }
  rpc FileCreate(FileCreateRequest) returns (FileCreateResponse) {
  }
  rpc FileCreateBulk(FileCreateBulkRequest) returns (FileCreateBulkResponse) {
    option (permission_name) = 'FileCreateUpdate';
  }
  //  rpc FileDeleteRestore(FileDeleteRestoreRequest) returns (FileDeleteRestoreResponse) {}
  rpc FileDelete(FileDeleteRequest) returns (FileDeleteResponse) {
  }

  rpc FileDeleteByBucket(FileDeleteByBucketRequest) returns (FileDeleteByBucketResponse) {
    option (permission_group) = 'file';
    option (permission_name) = 'FileDelete';
  }

  // import
  rpc ImportTable(ImportTableRequest) returns (ImportTableResponse) {}

  // emails
  rpc EmailSend(EmailSendRequest) returns (EmailSendResponse) {}

  // translations
  rpc TranslationList(TranslationListRequest) returns (TranslationListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }
  rpc TranslationFindLocale(TranslationFindLocaleRequest) returns (TranslationFindLocaleResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }

  rpc TranslationCreateUpdateBulk(TranslationCreateUpdateBulkRequest) returns (TranslationCreateUpdateBulkResponse) {}
  rpc TranslationDelete(TranslationDeleteRequest) returns (TranslationDeleteResponse) {}

  //////////////////////////////////////////////////////////////////////////////////////////////
  // accounts
  //////////////////////////////////////////////////////////////////////////////////////////////
  // roles
  //*******************************************************************************************//
  rpc RoleList(RoleListRequest) returns (RoleListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc RoleListInput(RoleListInputRequest) returns (RoleListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
  rpc RoleFindForUpdate(RoleFindForUpdateRequest) returns (RoleFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
  rpc RoleCreateUpdate(RoleCreateUpdateRequest) returns (RoleCreateUpdateResponse) {}
  rpc RoleDeleteRestore(RoleDeleteRestoreRequest) returns (RoleDeleteRestoreResponse) {}
  rpc RoleDelete(RoleDeleteRequest) returns (RoleDeleteResponse) {}

  //*******************************************************************************************//
  // users
  //*******************************************************************************************//
  rpc UserList(UserListRequest) returns (UserListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc UserListInput(UserListInputRequest) returns (UserListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc UserPermissionListInput(UserPermissionListInputRequest) returns (UserPermissionListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
  rpc UserTypeListInput(UserTypeListInputRequest) returns (UserTypeListInputResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }

  rpc UserFind(UserFindRequest) returns (UserFindResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc UserFindForUpdate(UserFindForUpdateRequest) returns (UserFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
  rpc UserCreateUpdate(UserCreateUpdateRequest) returns (UserCreateUpdateResponse) {}
  rpc UserDeleteRestore(UserDeleteRestoreRequest) returns (UserDeleteRestoreResponse) {}
  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse) {}

  //*******************************************************************************************//
  // auth
  //*******************************************************************************************//
  rpc AuthLogin(AuthLoginRequest) returns (AuthLoginResponse) {
    option (skip_authentication) = true;
  }
  rpc AuthRefreshToken(AuthRefreshTokenRequest) returns (AuthRefreshTokenResponse) {
    option (skip_authentication) = true;
  }

  rpc AuthLogout(AuthLogoutRequest) returns (AuthLogoutResponse) {
    option (skip_authentication) = true;
  }
  rpc AuthRegister(AuthRegisterRequest) returns (AuthRegisterResponse) {
    option (skip_authentication) = true;
  }
  rpc AuthInvite(AuthInviteRequest) returns (AuthInviteResponse) {}
  rpc AuthAuthorize(AuthAuthorizeRequest) returns (AuthAuthorizeResponse) {
    option (skip_authorization) = true;
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc AuthLoginProvider(AuthLoginProviderRequest) returns (AuthLoginProviderResponse) {
    option (skip_authentication) = true;
  }
  rpc AuthLoginProviderCallback(AuthLoginProviderCallbackRequest) returns (AuthLoginProviderCallbackResponse) {
    option (skip_authentication) = true;
  }

  rpc AuthResetPasswordEmail(AuthResetPasswordEmailRequest) returns (AuthResetPasswordEmailResponse) {
    option (skip_authentication) = true;
  }
  rpc AuthResetPassword(AuthResetPasswordRequest) returns (AuthResetPasswordResponse) {
    option (skip_authentication) = true;
  }

  rpc AuthSessionList(AuthSessionListRequest) returns (AuthSessionListResponse) {
    option (permission_group) = 'session';
    option (permission_name) = 'SessionList';
  }

  rpc AuthSessionSetBlocked(AuthSessionSetBlockedRequest) returns (AuthSessionSetBlockedResponse) {
    option (permission_group) = 'auth';
    option (permission_name) = 'SessionSetBlocked';
  }
  rpc AuthSessionDelete(AuthSessionDeleteRequest) returns (AuthSessionDeleteResponse) {
    option (permission_group) = 'auth';
    option (permission_name) = 'SessionDelete';
  }

  //*******************************************************************************************//
  // tenant
  //*******************************************************************************************//

  rpc PartialDeleteRestore(PartialDeleteRestoreRequest) returns (PartialDeleteRestoreResponse) {}
  rpc PartialCreateUpdate(PartialCreateUpdateRequest) returns (PartialCreateUpdateResponse) {}
  rpc PartialList(PartialListRequest) returns (PartialListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc PageDeleteRestore(PageDeleteRestoreRequest) returns (PageDeleteRestoreResponse) {}
  rpc PageCreateUpdate(PageCreateUpdateRequest) returns (PageCreateUpdateResponse) {}
  rpc PageList(PageListRequest) returns (PageListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc SectionDeleteRestore(SectionDeleteRestoreRequest) returns (SectionDeleteRestoreResponse) {}

  rpc SectionCreateUpdate(SectionCreateUpdateRequest) returns (SectionCreateUpdateResponse) {}

  rpc SectionList(SectionListRequest) returns (SectionListResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc SectionFindForUpdate(SectionFindForUpdateRequest) returns (SectionFindForUpdateResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
  //*******************************************************************************************//
  // admin
  //*******************************************************************************************//

  rpc CommandPalleteSync(CommandPalleteSyncRequest) returns (CommandPalleteSyncResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authentication) = true;
  }
  rpc CommandPalleteSearch(CommandPalleteSearchRequest) returns (CommandPalleteSearchResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (skip_authorization) = true;
  }
}
